tests/unit/evaluation/flatzinc/test_array_too_long-bad.fzn_fd.exp
test_array_too_long-bad.fzn:1: error: array a has size 3, but was assigned 6.
----------
