tests/unit/evaluation/flatzinc/test_array_too_long-bad.fzn
% RUNS ON flatzinc
% RUNS ON fzn_fd
% RUNS ON fzn_fdlp
% RUNS ON fzn_lp
array [1..3] of int: a = [1, 2, 3, 4, 5, 6];
solve satisfy;
